k8s/apps/prism-streaming-rag/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: prism-streaming-rag
spec:
  selector:
    app: prism-streaming-rag
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
